--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "Sebastian Urbina <sebita.urbina@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsup src/index.ts"
+    "build": "tsup src/index.ts",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
+    "husky": "^8.0.3",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5"
   },
