--- a/.github/workflows/scheduled-builds.yml
+++ b/.github/workflows/scheduled-builds.yml
@@ -4,14 +4,14 @@ name: Check CGE appointments
 on:
   schedule:
     # https://crontab.guru
-    - cron: "20 * * * *"
+    - cron: "10,40 * * * *"
 jobs:
   build:
     name: Check new appointments date
     runs-on: ubuntu-latest
     steps:
       - name: Run script
-        run: node ./dist/index.js
+        run: yarn start
         env:
           BOT_KEY: ${{ secrets.BOT_KEY }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
