--- a/.github/workflows/scheduled-builds.yml
+++ b/.github/workflows/scheduled-builds.yml
@@ -4,12 +4,14 @@ name: Check CGE appointments
 on:
   schedule:
     # https://crontab.guru
-    - cron: "45,50 * * * *"
+    - cron: "10,40 * * * *"
 jobs:
   build:
     name: Check new appointments date
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Run script
         run: yarn start
         env:
