--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "build": "tsup src/index.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "playwright install chromium"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
