--- a/.github/workflows/scheduled-builds.yml
+++ b/.github/workflows/scheduled-builds.yml
@@ -4,7 +4,7 @@ name: Check CGE appointments
 on:
   schedule:
     # https://crontab.guru
-    - cron: "10,40 * * * *"
+    - cron: "10,40 7-20 * * *"
 jobs:
   build:
     name: Check new appointments date
